@@ -51,6 +51,7 @@ Version 1.11.1+svn:
      of instantly.
    * Fixed viewport centering issues with the Next Unit action, and some WML
      actions such as [scroll_to], [scroll_to_unit], and [message] (bug #18793).
+   * Removed the "move unit to hexfield" feature.
 
  * WML Engine:
    * When a map is replaced the number of owned villages for a side is updated
