@@ -68,7 +68,8 @@ Version 1.11.1+svn:
      of the screen.
    * Fix viewport centering issues with actions such as the Next Unit command,
      and the [scroll_to], [scroll_to_unit], and [message] WML actions (bug #18793).
- * WML engine:
+   * Removed the "move unit to hexfield" feature.
+* WML engine:
    * [unit_overlay] and [remove_unit_overlay] now return a more meaningful
      error message if the image= key is missing
    * When not replacing values, [effect] apply_to=defense will now modify
